# CSA-lab3

./: README.md  data_path.py  in.txt  isa.py  machine.py  out.txt  pyproject.toml  test_translator.py  translator.py  translator_asm.py  twewer.py
.github/workflows/: main.yml
examples/: foo_input.txt  hello.lsp  prop.txt
src/: __init__.py  golden_test.py  in.txt  isa.py  machine.py  test_data_path.py  translator.py
src/goldens/: cat.yml  hello.yml  hello_user.yml  prop.yml
src/tests/: test_eql.py  test_if.py  test_lisp_read.py  test_lwth.py  test_print.py  test_raz.py  test_read.py  test_sum.py  test_var.py
tests/: test_eql.py  test_if.py  test_lwth.py  test_print.py  test_raz.py  test_read.py  test_sum.py  test_var.py
