[tool.poetry]
name = "brainfuck"
version = "0.1.1"
description = "An example project for Computer System Architecture class."
authors = ["Aleksandr Penskoi <aleksandr.penskoi@gmail.com>"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.7"
pytest = "^7.4.0"
pytest-golden = "^0.2.2"
ruff = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
enable_assertion_pass_hook = true
addopts = "--doctest-modules"
log_format = "%(levelname)-7s %(module)s:%(funcName)-13s %(message)s"
